# duckdb-ai

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  extension_config.cmake  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: MainDistributionPipeline.yml  deploy-docs.yml
docs/: DISTRIBUTION.md  RELEASING.md  SMOKE_TESTING.md  UPDATING.md  VALIDATION.md  WORKPLAN.md  best-practices.md  functions.md  index.md  provider-guides.md  runtime-behavior.md  security-data-flow.md
docs/cookbooks/: audited-lakehouse-output.md  index.md  lance-semantic-search.md  messy-document-intake.md  production-batch-enrichment.md  source-database-enrichment.md  sql-assistant.md  structured-triage-records.md  support-ticket-data.md  support-ticket-enrichment.md  support-ticket-similarity.md  usage-cost-observability.md
scripts/: preview_community_docs.sh
src/: duckdb_ai_extension.cpp  duckdb_ai_provider.cpp
src/include/: ai_extension.hpp  duckdb_ai_extension.hpp  duckdb_ai_provider.hpp
test/: README.md
test/benchmarks/: ai_runtime_benchmark.py
test/community_docs_snapshot/: functions.md  settings.md
test/smoke/: mock_provider_smoke.py
test/sql/: duckdb_ai.test
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
